<resources>
    <string name="app_name">URA Job Application Platform</string>
    <string name="welcome">Welcome to URA job application platform.</string>
    <string name="start">Start Your Application</string>
    <string name="personal_details">I. Personal Details</string>
    <string name="title">Title:</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="gender">Gender:</string>
    <string name="dob">Date Of Birth:</string>
    <string name="address">Address</string>
    <string name="telephone">Telephone</string>
    <string name="email">E-mail</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="job_details">ii. Job Details</string>
    <string name="job_applying">Job Being Applied for:</string>
    <string name="job_qualifications">Qualifications</string>
    <string name="add_qualifications">Additional Qualifications:</string>
    <string name="ccna">Cisco Certified Network Associate</string>
    <string name="csdp">Certified Software Development Professional</string>
    <string name="nlce">Novell Linux Certified Engineer</string>
    <string name="comptia">CompTIA Linux+ certification</string>
    <string name="description">Please write a short description of yourself, achievements and career: path</string>
    <string name="confirm">Confirm and Continue</string>
    <string name="submit">Submit Application</string>
    <string name="short_desc">Description of yourself</string>
    <string-array name="title_array">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Ms.</item>
        <item>Dr.</item>
        <item>Miss.</item>
        <item>Mx. </item>
    </string-array>
    <string-array name="job_array">
        <item>Systems administrator</item>
        <item>Software Engineer and Programmer</item>
        <item>Network Administrator</item>
        <item>Systems Analyst</item>
    </string-array>
    <string name="namerror">Invalid Name. Should be letters only.</string>
    <string name="addresserror">Invalid Address</string>
    <string name="telerror">Invalid phone number.</string>
    <string name="helpertextphone">E.g. 077*******</string>
    <string name="helpertextquali">Please type all degree qualifications separated by a semicolon</string>
    <string name="submitted">Your Application has been submitted.</string>
    <string name="goodluck">Good luck</string>
    <string name="descerror">Please check the details</string>

</resources>