<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_details"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="@font/catamaran_semibold"
            android:textColor="@color/blue_444"
            android:layout_marginBottom="15sp"

            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_applying"
            android:textSize="18sp"
            android:fontFamily="@font/catamaran_semibold"
            android:textColor="@color/blue_444"
            android:textStyle="bold"

            />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:background="@color/grey"
            />

<!--        <TextView-->
<!--            android:id="@+id/textView5"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/job_qualifications"-->
<!--            android:textSize="18sp" />-->

<!--        <EditText-->
<!--            android:id="@+id/editTextTextMultiLine"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="219dp"-->
<!--            android:ems="10"-->
<!--            android:gravity="start|top"-->
<!--            android:inputType="textMultiLine" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledQuaTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_qualifications"
            app:startIconDrawable="@drawable/round_work_outline_black_18dp"
            android:layout_marginBottom="10sp"
            app:boxStrokeColor="@color/blue_444"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/blue_444"
            app:counterEnabled="true"
            app:helperText="@string/helpertextquali"
            app:counterMaxLength="200"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_qualifications"
            android:fontFamily="@font/catamaran_semibold"
            android:textColor="@color/blue_444"
            android:textStyle="bold"
            android:textSize="18sp" />

        <CheckBox
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checked="false"
            android:text="@string/ccna"
            app:buttonTint="@color/blue_444"
            />

        <CheckBox
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checked="false"
            app:buttonTint="@color/blue_444"
            android:fontFamily="@font/catamaran_semibold"
            android:text="@string/csdp"/>

        <CheckBox
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checked="false"
            android:fontFamily="@font/catamaran_semibold"
            app:buttonTint="@color/blue_444"
            android:text="@string/nlce"/>
        <CheckBox
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checked="false"
            android:fontFamily="@font/catamaran_semibold"
            app:buttonTint="@color/blue_444"
            android:text="@string/comptia"/>

                <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran_semibold"

                    android:text="@string/description"
                    android:textColor="@color/blue_444"
                    android:textStyle="bold"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledDescTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            app:startIconDrawable="@drawable/round_format_align_left_black_18dp"
            app:boxStrokeColor="@color/blue_444"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/blue_444"
            app:counterEnabled="true"
            android:fontFamily="@font/catamaran_semibold"
            app:counterMaxLength="200"
            android:hint="@string/short_desc">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="feedBack"
            android:fontFamily="@font/catamaran_semibold"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>
