<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="15sp"/>
        <io.victoralbertos.breadcumbs_view.BreadcrumbsView
            android:id="@+id/breadcrumbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:numberOfSteps="3"
            app:visitedStepBorderDotColor="@color/black"
            app:visitedStepFillDotColor="@color/black"
            app:nextStepBorderDotColor="@color/black"
            app:nextStepFillDotColor="@color/black"
            app:visitedStepSeparatorColor="@color/black"
            app:nextStepSeparatorColor="@color/black"
            app:radiusDot="7dp"
            android:layout_marginBottom="12sp"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="15sp"
            />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedFNTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/f_name"
            android:layout_marginBottom="10sp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedLNTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/l_name"
            android:layout_marginBottom="10sp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="1sp"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textSize="18sp"
            android:textColor="@color/black"
            />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:layout_marginLeft="15sp"
            android:calendarViewShown="false"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledAddTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="@string/address"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTeleTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephone"
            android:layout_marginBottom="10sp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/textButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="jobDetails"
            android:text="@string/confirm" />

        <!--        <Button-->
<!--            android:id="@+id/button3"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:onClick="jobDetails"-->
<!--            android:text="@string/confirm" />-->

    </LinearLayout>
    </ScrollView>
